# fireflies-webook

./: .aider.chat.history.md  .env.example  .gitignore  ARCHITECTURE.md  README.md  SPECIFICATION.md  alembic.ini  commands.md  init-prompt.md  install.sh  package-lock.json  package.json  pyproject.toml  setup copy.sh  setup.sh  start.sh
app/: config.py  database.py  main.py  models.py  schemas.py
app/api/: endpoints.py
app/services/: fireflies.py  intent_detector.py  openai.py
app/utils/: logger.py
docs/: api_documentation.md  intent_detection_spec.md  tutorial.md  user_guide.md
supabase/: config.toml  project.toml
supabase/functions/: deno.json
supabase/functions/intent-detection/: deploy.sh  index.ts  test.ts
supabase/functions/meeting-info/: deploy.sh  index.ts  test.ts
supabase/functions/webhook-handler/: deploy.sh  index.ts  test.ts
supabase/migrations/: 20240101000000_create_meeting_data.sql
tests/: test_api.py  test_services.py
