[tool.poetry]
name = "fireflies-webhook"
version = "0.1.0"
description = "A webhook endpoint for processing Fireflies transcripts"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
sqlalchemy = "^1.4.23"
pydantic = "^1.8.2"
httpx = "^0.19.0"
python-dotenv = "^0.19.0"
alembic = "^1.7.3"
litellm = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry]
name = "fireflies-webhook"
version = "0.1.0"
description = "A webhook endpoint for processing Fireflies transcripts and detecting intents"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
sqlalchemy = "^1.4.23"
pydantic = "^1.8.2"
python-dotenv = "^0.19.0"
httpx = "^0.19.0"
openai = "^0.27.0"
alembic = "^1.7.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
